got the sliders to work! they look pretty good I reckon. Maybe some styling imrovements to be made

--- a/index.html
+++ b/index.html
@@ -15,18 +15,28 @@
     </div>
     <div id="stats">
         <h2>Vitals</h2>
-        <table>
-            <tr>
-                <th>Age</th>
-                <th>Fitness</th>
-                <th>Hunger</th>
-            </tr>
-            <tr>
-                <td id="age"></td>
-                <td id="fitness"></td>
-                <td id="hunger"></td>
-            </tr>
-        </table>
+
+        <div class="stat-container">
+            <div class="outer">
+                <p>Age</p>
+                <div class="inner" id="age"></div>
+            </div>
+        </div>
+
+        <div class="stat-container">
+            <div class="outer">
+                <p>Fitness</p>
+                <div class="inner" id="fitness"></div>
+            </div>
+        </div>
+
+        <div class="stat-container">
+            <div class="outer">
+                <p>Hunger</p>
+                <div class="inner" id="hunger"></div>
+            </div>
+        </div>
+  
     </div>
     <div id="controls">
         <button class="btn" name="growUp">Grow Up</button>
