styled the sliders, added each stat's number and positioned number and slider label

--- a/index.html
+++ b/index.html
@@ -18,21 +18,24 @@
 
         <div class="stat-container">
             <div class="outer">
-                <p>Age</p>
+                <p class="label">Age</p>
+                <p class="value" id="ageVal"></p>
                 <div class="inner" id="age"></div>
             </div>
         </div>
 
         <div class="stat-container">
             <div class="outer">
-                <p>Fitness</p>
+                <p class="label">Fitness</p>
+                <p class="value" id="fitnessVal"></p>
                 <div class="inner" id="fitness"></div>
             </div>
         </div>
 
         <div class="stat-container">
             <div class="outer">
-                <p>Hunger</p>
+                <p class="label">Hunger</p>
+                <p class="value" id="hungerVal"></p>
                 <div class="inner" id="hunger"></div>
             </div>
         </div>
